fix: responsive nav broken display on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1002,7 +1002,7 @@ h2 {
     min-width: 0;
   }
 
-  .desktop-nav {
+  .nav {
     display: none;
   }
 
